# gtasks-terminal

./: .gitignore  ADVANCED_FILTERING.md  ADVANCED_SYNC.md  ADVANCED_SYNC_OPTIMIZATION.md  AI_INTEGRATION_PLAN.md  ANALYSIS_SUMMARY.md  DASHBOARD_IMPLEMENTATION_PLAN.md  DASHBOARD_REFACTORING_GUIDE.md  EDITOR_FEATURE.md  ENVIRONMENT.md  IMPROVED_SYNC_DESIGN.md  INSTALLATION.md  KILO_CODING_RULEBOOK.md  LICENSE  ORDER_BY_FEATURE.md  ORGANIZED_TASKS_REPORT.md  PYPI_INSTALLATION.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_PLAN.md  REMOTE_SYNC_FEATURE_PLAN.md  REMOTE_SYNC_SECURITY_GUIDE.md  REMOTE_SYNC_TEST_SCRIPT.py  REPORTS_FEATURE.md  STRUCTURE.md  STRUCTURE_COMPARISON.md  TASK_RECOVERY_GUIDE.md  TURSO_DATABASE_SETUP.md  check_local_apple_signatures.py  check_remote_apple_tasks.py  check_remote_apples.py  check_signatures.py  count_som_das.py  ctx.config  debug_datetime_formats.py  debug_signatures.py  deletion_log.json  demo_improved_sync.py  demo_plain_text.py  development_roadmap.md  (+38 more)
gtasks_cli/: AUTO_SAVE_FEATURE.md  AUTO_SAVE_IMPLEMENTATION.md  EMAIL_SETUP.md  FEATURE_UNDO.md  FEATURE_UPDATE_TAGS.md  INSTALLATION.md  MANIFEST.in  MIGRATION_PLAN.md  MULTI_ACCOUNT.md  PYPI_UPLOAD.md  README.md  SETUP_ASSISTANT.md  __main__.py  check_tasks.py  comprehensive_dup_test.py  debug_dup.py  debug_full_dup.py  debug_signatures.py  debug_simple.py  debug_step_by_step.py  debug_storage.py  debug_task_creation.py  debug_task_creation2.py  debug_task_with_due_date.py  debug_tasklists.py  final_dedup.py  list_task_lists.py  pyproject.toml  requirements.txt  setup.py  simple_sync_test.py  tasks.db  test_basic.py  test_click.py  test_dedup_direct.py  test_dup_fix.py  test_dup_fix_final.py  test_recurring.py  test_simple_sync.py  test_sync_fix.py  (+8 more)
gtasks_cli/config/: default_config.yaml
gtasks_cli/examples/: deduplication_example.py
gtasks_cli/maintenance/: README.md  deduplicate.py
gtasks_cli/maintenance/docs/: deduplication_summary.md
gtasks_cli/scripts/: migrate_to_sqlite.py
gtasks_cli/src/gtasks_cli/: __init__.py  __main__.py  main.py  mcp_server.py  setup_assistant.py
gtasks_cli/src/gtasks_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gtasks_cli/src/gtasks_cli/ai/: client.py  tools.py
gtasks_cli/src/gtasks_cli/commands/: account.py  add.py  advanced_sync.py  ai.py  auth.py  config.py  deduplicate.py  delete.py  done.py  generate_report.py  interactive.py  interactive_help.py  list.py  mcp.py  remote.py  search.py  summary.py  sync.py  tasklist.py  update.py  view.py
gtasks_cli/src/gtasks_cli/commands/interactive_utils/: __init__.py  add_commands.py  bulk_update_commands.py  common.py  delete_commands.py  display.py  done_commands.py  editor.py  search.py  (+8 more)
gtasks_cli/src/gtasks_cli/core/: task_manager.py
gtasks_cli/src/gtasks_cli/integrations/: advanced_sync_manager.py  advanced_sync_manager.py.orig  google_auth.py  google_tasks_client.py  sync_manager.py
gtasks_cli/src/gtasks_cli/models/: __init__.py  task.py  task_list.py
gtasks_cli/src/gtasks_cli/reports/: base_report.py  custom_filtered_report.py  future_timeline_report.py  organized_tasks_report.py  overdue_tasks_report.py  pending_tasks_report.py  task_completion_rate_report.py  task_completion_report.py  task_creation_report.py  task_distribution_report.py  timeline_report.py
gtasks_cli/src/gtasks_cli/storage/: __init__.py  config_manager.py  libsql_storage.py  local_storage.py  sqlite_storage.py  sync_config_storage.py
gtasks_cli/src/gtasks_cli/sync/: __init__.py  conflict_resolver.py  remote_sync_manager.py
gtasks_cli/src/gtasks_cli/utils/: datetime_utils.py  display.py  email_sender.py  exceptions.py  logger.py  tag_extractor.py  task_deduplication.py
(+124 files in other folders)
