[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtasks-cli"
dynamic = ["version"]
description = "A powerful command-line interface for managing Google Tasks with enhanced features and functionality which is secure and easy to use with advanced features."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "pyyaml>=6.0",
    "appdirs>=1.4.4",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "prompt-toolkit>=3.0.0",
    "colorama>=0.4.6",
    "litellm>=1.42.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sirusdas/gtasks-terminal"
"Bug Reports" = "https://github.com/sirusdas/gtasks-terminal/issues"
"Source" = "https://github.com/sirusdas/gtasks-terminal"

[project.scripts]
gtasks = "gtasks_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "build",
    "twine",
]

[tool.hatch.version]
path = "src/gtasks_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gtasks_cli"]